force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_Action__c.field-meta.xml
<CustomField>
    <fullName>TPM_Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>