force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_ConditionStatus__c.field-meta.xml
<CustomField>
    <fullName>TPM_ConditionStatus__c</fullName>
    <description>Status of the condition</description>
    <label>Condition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>