force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_Currency__c.field-meta.xml
<CustomField>
    <fullName>TPM_Currency__c</fullName>
    <description>Currency of the condition</description>
    <formula>TEXT( cgcloud__Tactic__r.TPM_Currency__c )</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>