force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>TPM_DistributionChannel__c</fullName>
    <description>Distribution Channel of the Account from the condition</description>
    <formula>cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__Anchor_Account__r.TPM_Dist_Channel_ID__c</formula>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>