force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_MA_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>TPM_MA_AccountNumber__c</fullName>
    <description>Managed Account number for the condition</description>
    <formula>cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__Anchor_Account__r.AccountNumber</formula>
    <label>Managed Account Number</label>
    <type>Text</type>
</CustomField>