force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>TPM_PaymentMethod__c</fullName>
    <description>Payment Method of the associated tactic</description>
    <formula>TEXT(cgcloud__Tactic__r.cgcloud__Payment_Method__c)</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>