force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_Promotion__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion__c</fullName>
    <description>Promotion that the condition was created from</description>
    <formula>cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__ExternalId__c</formula>
    <label>Promotion</label>
    <type>Text</type>
</CustomField>