force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_RateBasis__c.field-meta.xml
<CustomField>
    <fullName>TPM_RateBasis__c</fullName>
    <description>Rate Basis (Rate Unit) of the condition</description>
    <formula>TEXT(cgcloud__Tactic__r.cgcloud__Compensation_Model__c)</formula>
    <label>Rate Basis</label>
    <type>Text</type>
</CustomField>