force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>TPM_SalesOrg__c</fullName>
    <description>Sales Org of the condition</description>
    <formula>cgcloud__Tactic__r.cgcloud__Sales_Org__c</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>