force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_ShipmentFrom__c.field-meta.xml
<CustomField>
    <fullName>TPM_ShipmentFrom__c</fullName>
    <description>Valid From of the condition (shipment from)</description>
    <formula>cgcloud__Tactic__r.cgcloud__Shipment_Date_From__c</formula>
    <label>Shipment Valid From</label>
    <type>Date</type>
</CustomField>