force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_ShipmentThrough__c.field-meta.xml
<CustomField>
    <fullName>TPM_ShipmentThrough__c</fullName>
    <description>Valid Through of the condition (shipment through)</description>
    <formula>cgcloud__Tactic__r.cgcloud__Shipment_Date_Thru__c</formula>
    <label>Shipment Valid Through</label>
    <type>Date</type>
</CustomField>