force-app/main/default/objects/cgcloud__Tactic_Product_Condition__c/fields/TPM_ZCode__c.field-meta.xml
<CustomField>
    <fullName>TPM_ZCode__c</fullName>
    <description>Duracell ZCode associated to the condition</description>
    <label>ZCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>